--- a/index.html
+++ b/index.html
@@ -200,9 +200,18 @@
             </div>
         </div>
     </div>
+    
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
     <script src="js/animations.js"></script>
+    <script src="js/image-handler.js"></script>
+    <script src="js/search-filter.js"></script>
+    <script src="js/theme-toggle.js"></script>
+    <script src="js/scroll-progress.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/animations.js"></script>
+</body>
+</html>
 </body>
 </html>
